--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +6,30 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root {
+  --background: rgb(0, 0, 0);
+  --accent-background: rgb(43, 43, 43);
+  --layer-background: rgb(66, 66, 66);
+  --nav-background: rgba(0, 0, 0, 0.8);
+  --text-primary: rgb(255, 255, 255);
+  --text-secondary: white;
+  --accent: #3e5df7;
+}
+[data-theme='light'] {
+  --background: #F0F0F0;
+  --accent-background: rgb(255, 255, 255);
+  --layer-background: rgb(240, 240, 255);
+  --nav-background: rgba(181, 181, 181, 0.8);
+  --text-primary: rgb(0, 0, 0);
+  --text-secondary: black;
+  --accent: #3e5df7;
 }
