about section done just need to add images

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,25 +1,39 @@
-.About{
-    height: 170vh;
-    width: 100%;
+.About {
+  height: 170vh;
+  width: 100%;
+  color: var(--text-primary);
+}
+.about-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.about-sect-cont {
+  /* border: 1px solid; */
+  width: 80%;
+  height: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
+.about-sect-box {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.about-container{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+.about-sect-box p {
+  font-size: 30px;
+  font-weight: 300;
 }
-.about-container div{
-    border: 1px solid;
-    width: 80%;
-    height: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.about-text-left {
+  text-align: left;
 }
-
-.about-sect-box{
-    
+.about-text-right {
+  text-align: right;
 }
