--- a/src/Components/Strip/Strip.css
+++ b/src/Components/Strip/Strip.css
@@ -1,15 +1,22 @@
 .Strip{
     height: 20vh;
     width: 100%;
-    background-color: rgba(26, 24, 28, 0.128);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    color: var(--text-primary);
 }
 
 .strip-container{
     height: 100%;
-    width: 100%;
+    width: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--accent-background);
+    border-radius: 20px;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, .05);
 }
 .strip-container div{
     height: 100%;
@@ -20,9 +27,10 @@
     flex-direction: column;
 }
 
-.strip-container div h1{
+.strip-number{
     margin: 0;
-    font-size: 40px;
+    font-size: 50px;
+    color: var(--accent);
 }
 
 @media only screen and (max-width: 900px) {
@@ -31,8 +39,8 @@
 }
 
 .strip-container{
-    height: 100%;
-    width: 100%;
+    height: 300px;
+    width: 80%;
     display: grid;
 grid-template-columns: repeat(2, 1fr);
 grid-template-rows: repeat(2, 1fr);
@@ -43,7 +51,7 @@ grid-row-gap: 0px;
     height: 100%;
     width: 100%;
 }
-.strip-container div h1{
+.strip-number{
     font-size: 40px;
 }
 }
