--- a/src/Components/Strip/Strip.css
+++ b/src/Components/Strip/Strip.css
@@ -17,6 +17,7 @@
     background-color: var(--accent-background);
     border-radius: 20px;
     box-shadow: 20px 20px 30px rgba(0, 0, 0, .05);
+    max-width: 1500px;
 }
 .strip-container div{
     height: 100%;
