--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -222,3 +222,29 @@ content: var(--accent);
   overflow: hidden;
 
 }
+
+.dropdown-aside {
+  background-color: var(--background);
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 1;
+}
+
+.dropdown-container {
+  /* margin: 4.5rem 1.4rem; */
+  width: 100%;
+}
+
+.dropdown-btn-container {
+  position: fixed;
+}
+
+.dropdown-container a {
+  color: #f9fafb;
+  text-decoration: none;
+  font-size: 1.75rem;
+  font-weight: 600;
+  display: block;
+  margin: 20px;
+}
